Don't crash during code folding when "scroll past end of document" is enabled. Generally don't try to pass a zero-offset to viewLineOffset as this will always lead to an assert if "dynamic word wrap" is enabled.

Btw.: What m_minLinesVisible should have to do with scrollPastEnd
is hidden to me - probably a bug and someone wanted to check against
autoCenterLines but even then m_minLInesVisible is something different.

Add testcase for various configurations, showing that it works fine now.

BUG: 157754