part/tests/kateview_test.h
@@ -34,6 +34,9 @@ private Q_SLOTS:
   void testReloadMultipleViews();
 
   void testLowerCaseBlockSelection();
+
+  void testFolding_data();
+  void testFolding();
 };
 
 #endif // KATE_VIEW_TEST_H
